--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 # These are supported funding model platforms
 
 github: Vysp3r
+custom: https://www.paypal.com/donate/?business=F7KQ7LR84DLZ8&no_recurring=0&currency_code=CAD
