--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -19,6 +19,7 @@
       <li>Lutris</li>
       <li>Heroic Games Launcher</li>
       <li>Bottles</li>
+      <li>WineZGUI</li>
     </ul>
     <p>Supported compatibility tools:</p>
     <ul>
@@ -33,6 +34,7 @@
       <li>Proton EM</li>
       <li>Proton Tkg</li>
       <li>Proton Sarek</li>
+      <li>Kron4ek Wine-Builds Proton</li>
       <li>Kron4ek Wine-Builds Vanilla</li>
       <li>Kron4ek Wine-Builds Staging</li>
       <li>Kron4ek Wine-Builds Staging-Tkg</li>
