Add used/unused filters in the "Runners" tab filters bar

--- a/src/meson.build
+++ b/src/meson.build
@@ -22,6 +22,7 @@ sources = files(
   'widgets/runners/basic-row.vala',
   'widgets/runners/installed-row.vala',
   'widgets/runners/runners-box.vala',
+  'widgets/runners/filters-box.vala',
 
   'widgets/games/games-box.vala',
   'widgets/games/switch-profile-button.vala',
