Update PayPal donation link in FUNDING.yml
Signed-off-by: Vysp3r <dev@vysp3r.com>

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: Vysp3r
-custom: https://www.paypal.com/donate/?business=F7KQ7LR84DLZ8&no_recurring=0&currency_code=CAD
+custom: https://www.paypal.com/donate/?hosted_button_id=HHTF5LABABD3A
