Add preferences dialog

--- a/meson.build
+++ b/meson.build
@@ -11,16 +11,16 @@ valac = meson.get_compiler('vala')
 
 src_dir = meson.project_source_root() / 'src'
 
-globals_h = configuration_data()
-globals_h.set_quoted('APP_NAME', meson.project_name().split('.')[2])
-globals_h.set_quoted('APP_ID', meson.project_name())
-globals_h.set_quoted('APP_VERSION', meson.project_version())
-globals_h.set_quoted('LOCALE_DIR', join_paths (get_option('prefix'), get_option('localedir')))
-globals_h.set_quoted('RESOURCE_BASE', join_paths('/', meson.project_name().replace('.', '/')))
-configure_file(output : 'globals.h', configuration : globals_h)
+config_h = configuration_data()
+config_h.set_quoted('APP_NAME', meson.project_name().split('.')[2])
+config_h.set_quoted('APP_ID', meson.project_name())
+config_h.set_quoted('APP_VERSION', meson.project_version())
+config_h.set_quoted('LOCALE_DIR', join_paths (get_option('prefix'), get_option('localedir')))
+config_h.set_quoted('RESOURCE_BASE', join_paths('/', meson.project_name().replace('.', '/')))
+configure_file(output : 'config.h', configuration : config_h)
 
-globals_dep = valac.find_library ('globals', dirs: src_dir)
-globals_inc = include_directories('.')
+config_dep = valac.find_library ('config', dirs: src_dir)
+config_inc = include_directories('.')
 
 add_global_arguments('-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()), language: 'c')
 
