--- a/data/com.vysp3r.ProtonPlus.metainfo.xml.in
+++ b/data/com.vysp3r.ProtonPlus.metainfo.xml.in
@@ -93,6 +93,13 @@
   </screenshots>
 
   <releases>
+    <release version="0.5.16" date="2026-02-01">
+      <description>
+        <ul>
+          <li>✨ Added DW-Proton Latest</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.5.15" date="2026-01-02">
       <description>
         <ul>
