Implement CLI handler with version, help, list, install, uninstall, and update commands

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,8 @@ sources = files(
   'globals.vala',
   'return-code.vala',
 
+  'cli/cli.vala',
+
   'widgets/application.vala',
   'widgets/status-box.vala',
   'widgets/window.vala',
